[package]
name = "avrman"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "AVR programmer natively written in Rust"
repository = "https://github.com/stephenkingston/avrman"

[[bin]]
name = "avrman"
path = "src/avrman/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
ihex = "3.0.0"
indicatif = "0.17.11"
serialport = "4.7.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
